# govnianbao

./: DEBUG_SECTION3.md  DIAGNOSIS_CHECKLIST.md  FIX_COMPLETION_SUMMARY.md  HANDOFF.md  INDEX.md  QUICK_FIX_GUIDE.md  QUICK_VERIFY.md  README.md  ROOT_CAUSE_FIX_REPORT.md  SECTION3_FIX_SUMMARY.md  debug_section3_output.json  debug_section3_table.py  diagnose_extraction.py  pyproject.toml  requirements.txt  sample_report_section3.txt  section3_raw_text.txt  test_2024_format.py  test_partial_missing.py  政务公开年报模版.docx
src/app/: main.py
src/app/api/routes/: reports.py
src/app/models/: report.py
src/app/parse/: annual_report.py
src/app/services/: fetch_url.py  import_pdf.py  report_repository.py
src/govnianbao/: __init__.py  annual_report_parser.py  models.py  tables_parser.py  template_tables.py  text_parser.py
src/govnianbao.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_annual_report_parser.py  test_tables_parser.py
