[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "govnianbao"
version = "0.1.0"
description = "Gov information annual report parser"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "govnianbao @ git+https://github.com/zxj6827111-blip/govnianbao.git@main",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
